# sepa-reu-2025

./: benchmark.cpp
beginnerparlay/: CMakeLists.txt
beginnerparlay/src/: filter.cpp  filter.h  main.cpp  prefix.cpp  prefix.h  reduction.cpp  reduction.h
benchmarking/: CMakeLists.txt
benchmarking/src/: benchmark.cpp  benchmarking.cpp  generator.h
inplace/: CMakeLists.txt
inplace/include/: primitives.h
inplace/src/: main.cpp
